# de_portfolio_nyc_tlc

./: .gitignore  README.md  pyproject.toml
diagrams/: .$diagrams.drawio.bkp  diagrams.drawio
src/de_portfolio_nyc_tlc/: README.md  dagster.yaml  pyproject.toml  setup.cfg  setup.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/: __init__.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/assets/: constants.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/assets/yellow_taxi_data/: README.md  constants.py  csv_asset_graph.py  csv_assets.py  dim_table_assets.py  dim_tables_assets.py  parquet_assets.py  table_assets.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/assets/yellow_taxi_data/checks/: __init__.py  parquet_assets_checks.py  table_asset_checks.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/assets/yellow_taxi_data/constants/: table_names.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/assets/yellow_taxi_data/helpers/: csv_asset_helpers.py  table_helpers.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/assets/yellow_taxi_data/jobs/: jobs.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/assets/yellow_taxi_data/models/: taxi_trip_records-mock.json  (+1 more)
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/jobs/: __init__.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/partitions/: __init__.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/resources/: __init__.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc/utils/: log_utils.py
src/de_portfolio_nyc_tlc/de_portfolio_nyc_tlc_tests/: test_asset_ops.py
src/de_portfolio_nyc_tlc/tofu/: main.tf  variables.tf
(+2 files in other folders)
