[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "de_portfolio_nyc_tlc"


[tool.pytest.ini_options]
addopts = "-rP --disable-warnings --basetemp=de_portfolio_nyc_tlc_tests/temp_dir"
testpaths = ["de_portfolio_nyc_tlc_tests"]
tmp_path_retention_policy = "all"
